--- a/src/view/AuftragBearbeiten.form
+++ b/src/view/AuftragBearbeiten.form
@@ -56,7 +56,9 @@
                           <Component id="jtfAuftragsID_AuftragBearbeiten" min="-2" pref="150" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="jbLupeAuftragsID_AuftragBearbeiten" min="-2" pref="35" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                          <Component id="jbBearbeiten_AutfragBearbeiten" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
                           <Component id="jButton1" min="-2" pref="130" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
@@ -66,7 +68,11 @@
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="51" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="jbAbbrechen_AuftragBearbeiten" min="-2" pref="150" max="-2" attributes="0"/>
+                              <Group type="102" attributes="0">
+                                  <Component id="jbSpeichern_AuftragBearbeiten" min="-2" pref="130" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="jbAbbrechen_AuftragBearbeiten" min="-2" pref="130" max="-2" attributes="0"/>
+                              </Group>
                               <Component id="jpUnterPanel_AuftragBearbeiten" min="-2" pref="861" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -84,17 +90,25 @@
                   <Component id="jSeparator10" min="-2" pref="10" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jLabel87" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jtfAuftragsID_AuftragBearbeiten" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jbLupeAuftragsID_AuftragBearbeiten" alignment="1" min="-2" pref="25" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="jLabel87" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jtfAuftragsID_AuftragBearbeiten" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
-                      <Component id="jButton1" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jButton1" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                          <Component id="jbBearbeiten_AutfragBearbeiten" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jpUnterPanel_AuftragBearbeiten" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jbAbbrechen_AuftragBearbeiten" min="-2" pref="30" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jbAbbrechen_AuftragBearbeiten" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="jbSpeichern_AuftragBearbeiten" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                  </Group>
                   <EmptySpace pref="16" max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -200,14 +214,14 @@
                                               <Group type="102" alignment="0" attributes="0">
                                                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                                                   <EmptySpace max="32767" attributes="0"/>
-                                                  <Component id="jComboBox1" min="-2" pref="150" max="-2" attributes="0"/>
+                                                  <Component id="jcbStatus_AuftragBearbeiten" min="-2" pref="150" max="-2" attributes="0"/>
                                               </Group>
                                               <Group type="102" alignment="0" attributes="0">
                                                   <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
                                                   <EmptySpace min="-2" pref="102" max="-2" attributes="0"/>
                                                   <Group type="103" groupAlignment="0" attributes="0">
                                                       <Component id="jtfGPID_AuftragBearbeiten" min="-2" pref="150" max="-2" attributes="0"/>
-                                                      <Component id="jComboBox2" alignment="1" min="-2" pref="150" max="-2" attributes="0"/>
+                                                      <Component id="jcbAuftragsart_AuftragBearbeiten" alignment="1" min="-2" pref="150" max="-2" attributes="0"/>
                                                       <Component id="jtfGPName_AuftragBearbeiten" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
                                                   </Group>
                                               </Group>
@@ -234,7 +248,7 @@
                                   </Group>
                                   <Group type="102" alignment="1" attributes="0">
                                       <Group type="103" groupAlignment="1" attributes="0">
-                                          <Component id="jtfBeschreibungAuftragBearbeiten" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="jtaBeschreibungAuftragBearbeiten" alignment="0" max="32767" attributes="0"/>
                                           <Group type="102" attributes="0">
                                               <Group type="103" groupAlignment="0" attributes="0">
                                                   <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -293,7 +307,7 @@
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jLabel49" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jComboBox2" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                                  <Component id="jcbAuftragsart_AuftragBearbeiten" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                                   <Component id="jLabel2" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
                                   <Component id="jftfErfassungsdatumAuftragBearbeiten" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                               </Group>
@@ -314,14 +328,14 @@
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jComboBox1" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                                  <Component id="jcbStatus_AuftragBearbeiten" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                                   <Component id="jLabel141" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="jtfZKIDAuftragBearbeiten" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
                               <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jtfBeschreibungAuftragBearbeiten" min="-2" pref="104" max="-2" attributes="0"/>
+                              <Component id="jtaBeschreibungAuftragBearbeiten" min="-2" pref="104" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="1" attributes="0">
                                   <Group type="102" attributes="0">
@@ -376,7 +390,7 @@
                 <Property name="text" type="java.lang.String" value="Auftragsart:"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JComboBox" name="jComboBox2">
+            <Component class="javax.swing.JComboBox" name="jcbAuftragsart_AuftragBearbeiten">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="14" style="0"/>
@@ -431,7 +445,7 @@
                 <Property name="text" type="java.lang.String" value="Erfassungsdatum:"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JComboBox" name="jComboBox1">
+            <Component class="javax.swing.JComboBox" name="jcbStatus_AuftragBearbeiten">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="14" style="0"/>
@@ -506,7 +520,7 @@
                 <Property name="text" type="java.lang.String" value="Beschreibung"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="jtfBeschreibungAuftragBearbeiten">
+            <Component class="javax.swing.JTextField" name="jtaBeschreibungAuftragBearbeiten">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="14" style="0"/>
@@ -678,6 +692,31 @@
             </Component>
           </SubComponents>
         </Container>
+        <Component class="javax.swing.JButton" name="jbBearbeiten_AutfragBearbeiten">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="14" style="0"/>
+            </Property>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/view/bearbeiten1.png"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Bearbeiten"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbBearbeiten_AutfragBearbeitenActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="jbSpeichern_AuftragBearbeiten">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="16" style="0"/>
+            </Property>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/view/speichern2.png"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Speichern"/>
+          </Properties>
+        </Component>
       </SubComponents>
     </Container>
   </SubComponents>
