--- a/src/view/AuftragAnzeigen.form
+++ b/src/view/AuftragAnzeigen.form
@@ -31,7 +31,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="AuftragAnzeigen" max="32767" attributes="0"/>
+          <Component id="AuftragAnzeigen" pref="804" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -531,6 +531,9 @@
               <Image iconType="3" name="/view/lupe.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbLupeAuftragsID_AuftragAnzeigenActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JComboBox" name="jcbAuftragsart_az">
           <Properties>
