--- a/src/view/AuftragBearbeiten.form
+++ b/src/view/AuftragBearbeiten.form
@@ -102,7 +102,7 @@
                   <Component id="jpUnterPanel_AuftragBearbeiten" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jbAbbrechen_AuftragBearbeiten" min="-2" pref="30" max="-2" attributes="0"/>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="26" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -208,14 +208,14 @@
                                               <Group type="102" alignment="0" attributes="0">
                                                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                                                   <EmptySpace max="32767" attributes="0"/>
-                                                  <Component id="jComboBox1" min="-2" pref="150" max="-2" attributes="0"/>
+                                                  <Component id="jcbStatusAuftragBearbeiten" min="-2" pref="150" max="-2" attributes="0"/>
                                               </Group>
                                               <Group type="102" alignment="0" attributes="0">
                                                   <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
                                                   <EmptySpace min="-2" pref="102" max="-2" attributes="0"/>
                                                   <Group type="103" groupAlignment="0" attributes="0">
                                                       <Component id="jtfGPID_AuftragBearbeiten" min="-2" pref="150" max="-2" attributes="0"/>
-                                                      <Component id="jComboBox2" alignment="1" min="-2" pref="150" max="-2" attributes="0"/>
+                                                      <Component id="jcbAuftragsartAuftragBearbeiten" alignment="1" min="-2" pref="150" max="-2" attributes="0"/>
                                                       <Component id="jtfGPName_AuftragBearbeiten" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
                                                   </Group>
                                               </Group>
@@ -301,7 +301,7 @@
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jLabel49" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jComboBox2" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                                  <Component id="jcbAuftragsartAuftragBearbeiten" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                                   <Component id="jLabel2" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
                                   <Component id="jftfErfassungsdatumAuftragBearbeiten" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                               </Group>
@@ -322,7 +322,7 @@
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jComboBox1" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                                  <Component id="jcbStatusAuftragBearbeiten" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                                   <Component id="jLabel141" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="jtfZKIDAuftragBearbeiten" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                               </Group>
@@ -384,7 +384,7 @@
                 <Property name="text" type="java.lang.String" value="Auftragsart:"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JComboBox" name="jComboBox2">
+            <Component class="javax.swing.JComboBox" name="jcbAuftragsartAuftragBearbeiten">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="14" style="0"/>
@@ -439,7 +439,7 @@
                 <Property name="text" type="java.lang.String" value="Erfassungsdatum:"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JComboBox" name="jComboBox1">
+            <Component class="javax.swing.JComboBox" name="jcbStatusAuftragBearbeiten">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="14" style="0"/>
